--- a/bin/ColSFTP/ColSFTP.conf
+++ b/bin/ColSFTP/ColSFTP.conf
@@ -1,19 +1,19 @@
 [Log]
-log_path = /home/eva/Project/log
-log_size = 10000000
+log_path = /home/msf/MSF_V2/bin/ColSFTP/log
+log_size = 1000000
 log_count = 9
 
-[sftp1]
-ftp_ip = 172.16.90.12
-ftp_port = 222
-ftp_id = root
-ftp_pwd1 = ahqlwps12#$
-ftp_pwd2 = ahqlwps12#$
+[TEST]
+ftp_ip = 127.0.0.1
+ftp_port = 22
+ftp_id = sdi
+ftp_pwd1 = 132436
+ftp_pwd2 = 132435
 header_info =
-remote_dir = /DATA1/rawdata/
-remote_patt = .2
-local_dir = /data
-index_path = /home/eva/Project/index
+remote_dir = /home/sdi/garbage
+remote_patt = .test
+local_dir = /home/msf/MSF_V2/bin/ColSFTP/tmp
+index_path = /home/msf/MSF_V2/bin/ColSFTP/index
 index_name = sftp1.info
 sleep_time = 5
 pathsidx = 2
