Add Scheduler module

--- a/bin/Scheduler/conf/Scheduler.conf
+++ b/bin/Scheduler/conf/Scheduler.conf
@@ -1,5 +1,5 @@
 [GENERAL]
-LOG_DIR = /home/sktlnms/SKTLNMS/log
+LOG_DIR = log
 
 #======================================================
 #year   4-digit year number
@@ -16,11 +16,11 @@ LOG_DIR = /home/sktlnms/SKTLNMS/log
 YEAR        = *
 MONTH       = *
 DAY         = *
-WEEK        =
-DAY_OF_WEEK =
+WEEK        = *
+DAY_OF_WEEK = *
 HOUR        = *
 MINUTE      = *
-SECOND      = 0
+SECOND      = *
 OUTPUT      = file://%Y%m%d%H%M%S
 
 [SNMPGET]
