Fix KafkaModules Code for quality

--- a/bin/KafkaModules/conf/MessageMonitor.conf
+++ b/bin/KafkaModules/conf/MessageMonitor.conf
@@ -1,11 +1,11 @@
 [Log]
-logfilepath = /home/dev/KSCBP/log
+logfilepath = log
 logfilesize = 1000000
 logfilecount = 10
 
 [TEST1]
 START_DELIMITER=START
 END_DELIMITER=END
-INDEX_FILE=/home/dev/KSCBP/dump/TEST1.idx
-DUMP_PATH=/home/dev/KSCBP/dump
-bootstrap.servers=192.168.10.3:6667
+INDEX_FILE=dump/TEST1.idx
+DUMP_PATH=dump
+bootstrap.servers=localhost:9092
