--- a/bin/KafkaModules/conf/Producer.conf
+++ b/bin/KafkaModules/conf/Producer.conf
@@ -1,12 +1,15 @@
 [Log]
-LogFilePath=/home/dev/KSCBP/log
+LogFilePath=log
 LogFileSize=1000000
 LogFileCount=10
 
+[Kafka]
+bootstrap.servers=localhost:9092
+
 [TEST1]
 DB_TYPE=Oracle
-DB_CONFPATH=/home/dev/KSCBP/conf/Oracle.conf
+DB_CONFPATH=conf/Oracle.conf
 DB_SECTION=TEST
-QUERY = SELECT * FROM SOMAS_OVOPR00FDP WHERE ROWNUM >= 1 AND ROWNUM <= 100000
+QUERY = SELECT * FROM DEPT
 VOLUME=10000
 COL_DELIMITER=|
