--- a/bin/IrisSplitter/conf/IrisSplitter.conf
+++ b/bin/IrisSplitter/conf/IrisSplitter.conf
@@ -1,52 +1,15 @@
 [Log]
 LogFilePath = /home/sktlnms/SKTLNMS/log
 LogFileSize = 10000000
-LogFileCount = 5
+LogFileCount = 10
 
-[MARIADB]
-HOST        = 211.237.65.153
-PORT        = 3306
-USER        = sktlnms
-PASS        = !Hello.nms0
-DATABASE    = SKTLNMS
-
-
-[TRAFFIC_5MIN]
-SAVE_PATH = /DATA1/LOADER/TRAFFIC_5MIN
-STARTDATE = 20170911111500
-ENDDATE =       20170920132500
-KEY_INDEX = 1
-KEY_START_INDEX = -1
+[COMMON]
+SAVE_PATH = /DATA1/LOADER/CDR
+FILE_SEPARATE = |
+SAVE_SEPARATE = |
+STDIN_STRING = file://
+KEY_INDEX = 61
+KEY_START_INDEX =
 KEY_END_INDEX =
-DELAY_SECOND = 600
-GAP_SECOND = 300
-VALUE_START_INDEX = 0
-VALUE_END_INDEX =
-SAVE_SEPARATE = |^|
-QUERY = SELECT  EQUIP_GROUP_ID,
-                                EQUIP_TYPE_ID,
-                                NE_ID,
-                                CPU_USAGE_RATE,
-                                MEMORY_USAGE_RATE,
-                                TEMPERATURES,
-                                FAN_STATUS,
-                                POWER_STATUS,
-                                IF_NAME,
-                                IF_ALIAS,
-                                IF_INDEX,
-                                IF_MAC_ADDRESS,
-                                IF_SPEED,
-                                IF_ADMIN_STATUS,
-                                IF_STATUS,
-                                IF_IN_TRAFFIC_RATE,
-                                IF_IN_ERRORS,
-                                IF_OUT_TRAFFIC_RATE,
-                                IF_OUT_ERRORS,
-                                IF_IN_BPS,
-                                IF_OUT_BPS,
-                                IF_IN_PPS,
-                                IF_OUT_PPS,
-                                IF_CRC,
-                                IF_COLLISION
-                FROM TB_PM_NETWORK_5MIN WHERE EVENT_TIME = '%s';
-
+PARTITION_RANGE = 1440
+PARTITION_INDEX = 28
