Add IrisSplitter module

--- a/bin/IrisSplitter/conf/IrisSplitter.conf
+++ b/bin/IrisSplitter/conf/IrisSplitter.conf
@@ -1,15 +1,15 @@
 [Log]
-LogFilePath = /home/sktlnms/SKTLNMS/log
+LogFilePath = log
 LogFileSize = 10000000
 LogFileCount = 10
 
 [COMMON]
-SAVE_PATH = /DATA1/LOADER/CDR
-FILE_SEPARATE = |
+SAVE_PATH = tmp
+FILE_SEPARATE = ,
 SAVE_SEPARATE = |
 STDIN_STRING = file://
-KEY_INDEX = 61
-KEY_START_INDEX =
-KEY_END_INDEX =
-PARTITION_RANGE = 1440
-PARTITION_INDEX = 28
+KEY_INDEX = 0
+KEY_START_INDEX =0
+KEY_END_INDEX =0
+PARTITION_RANGE = 10
+PARTITION_INDEX = 1
