Add HiveLoader2 module

--- a/bin/ColSFTP/conf/ColSFTP.conf
+++ b/bin/ColSFTP/conf/ColSFTP.conf
@@ -1,5 +1,5 @@
 [Log]
-log_path = /home/msf/MSF_V2/bin/ColSFTP/log
+log_path = log
 log_size = 1000000
 log_count = 9
 
@@ -10,28 +10,11 @@ ftp_id = sdi
 ftp_pwd1 = 132436
 ftp_pwd2 = 132435
 header_info =
-remote_dir = /home/sdi/garbage
+remote_dir = garbage
 remote_patt = .test
-local_dir = /home/msf/MSF_V2/bin/ColSFTP/tmp
-index_path = /home/msf/MSF_V2/bin/ColSFTP/index
+local_dir = tmp
+index_path = index
 index_name = sftp1.info
 sleep_time = 5
 pathsidx = 2
 patheidx = 4
-
-[sftp2]
-ftp_ip = 172.16.90.12
-ftp_port = 222
-ftp_id = root
-ftp_pwd1 = ahqlwps12#$
-ftp_pwd2 = ahqlwps12#$
-header_info =
-remote_dir = /DATA3/rawdata/
-remote_patt = .2
-local_dir = /data
-index_path = /home/eva/Project/index
-index_name = sftp2.info
-sleep_time = 5
-pathsidx = 2
-patheidx = 4
-
