Add examples to each modules

--- a/bin/Aggregator/conf/Aggregator.conf
+++ b/bin/Aggregator/conf/Aggregator.conf
@@ -4,13 +4,12 @@ logfilesize = 1000000
 logfilecount = 10
 
 [TEST1]
-SEP=|
-GROUPBY=IPWT,IPWS,ISS,DDAT,KTME
-SUM=CAEP
-MAX=CAEP
-MIN=CAEP
-COUNT=CAEP
-DB_TYPE=Oracle
-DB_CONFPATH=conf/Oracle.conf
-DB_SECTION=secods
-DB_TABLE=SECODS.SOMAS_OVCUR00FTPMM_AGG
+SEP=,
+GROUPBY=major
+SUM=age
+MAX=age
+MIN=age
+DB_TYPE=MySQL
+DB_CONFPATH=conf/MySQL.conf
+DB_SECTION=TEST
+DB_TABLE=es1_aggregate
