--- a/bin/FilePatternMonitor/conf/FilePatternMonitor.conf
+++ b/bin/FilePatternMonitor/conf/FilePatternMonitor.conf
@@ -1,13 +1,13 @@
 [GENERAL]
-LOG_PATH	= /home/msf/MSF_V2/bin/FilePatternMonitor/log
+LOG_PATH	= log
 LS_INTERVAL	= 5
 
 ###### ORIGINAL LOG ######
 [TEST]
-DIRECTORY	    = /home/msf/MSF_V2/bin/FilePatternMonitor/tmp
-INDEX_FILE	    = /home/msf/MSF_V2/bin/FilePatternMonitor/index/index.idx
+DIRECTORY	    = tmp
+INDEX_FILE	    = index/index.idx
 FILE_PATTERN	    = *
 EXTEND_STR	    =
-LS_INTERVAL	    = 5
+LS_INTERVAL	    = 2
 # name, basename, atime, ctime, mtime
 FILE_SORT           = name
