--- a/bin/HiveLoader2/conf/HiveLoader.conf
+++ b/bin/HiveLoader2/conf/HiveLoader.conf
@@ -5,7 +5,10 @@ USERNAME=hdfs
 DATABASE=default
 
 [Log]
-LogFilePath=/home/dev/KSCBP/log
+LogFilePath=log
 LogFileSize=1000000
 LogFileCount=10
 
+[TEST]
+Table=TEST
+Partitions=year,month
