--- a/bin/KafkaModules/conf/MessageMonitor.conf
+++ b/bin/KafkaModules/conf/MessageMonitor.conf
@@ -6,6 +6,6 @@ logfilecount = 10
 [TEST1]
 START_DELIMITER=START
 END_DELIMITER=END
-INDEX_FILE=dump/TEST1.idx
+INDEX_FILE=index/TEST1.idx
 DUMP_PATH=dump
 bootstrap.servers=localhost:9092
