--- a/bin/SFTPCollector/conf/SFTPCollector.conf
+++ b/bin/SFTPCollector/conf/SFTPCollector.conf
@@ -6,12 +6,12 @@ log_count = 9
 [TEST]
 ftp_ip = 127.0.0.1
 ftp_port = 22
-ftp_id = sdi
-ftp_pwd1 = 132436
-ftp_pwd2 = 132435
+ftp_id = msf
+ftp_pwd1 = msf
+ftp_pwd2 = msf
 header_info =
-remote_dir = garbage
-remote_patt = .test
+remote_dir = /home/msf/MSF_V2/bin/SFTPCollector/data
+remote_patt = .txt
 local_dir = tmp
 index_path = index
 index_name = sftp1.info
