Add example of IrisLoader Fix README.md of IrisLoader

--- a/bin/IrisLoader/conf/IrisLoader.conf
+++ b/bin/IrisLoader/conf/IrisLoader.conf
@@ -1,15 +1,16 @@
 [Log]
-LogFilePath = /home/sktlnms/SKTLNMS/log/IrisLoader
-LogFileSize = 10000000
-LogFileCount = 5
+LogFilePath = log
+LogFileSize = 1000000
+LogFileCount = 10
 
 [IRIS]
-IRIS_IP = 8F_B55_NMS_M:5000
-IRIS_ID = sktlnms
-IRIS_PWD = sktlnms
-CTL_PATH = /home/sktlnms/SKTLNMS/ctl/TB_PM_NETWORK_5MIN_STATISTICS.ctl
+IRIS_IP = 192.168.101.104:5050
+IRIS_ID = vsfs
+IRIS_PWD = vsfs123
+CTL_PATH = ctl/TEST_TABLE.ctl
 KEY_FILTER =
-TABLE = TB_PM_NETWORK_5MIN_STATISTICS
+TABLE = TEST_TABLE
 FILE_REMOVE = N
 TIMEOUT = 300
 SEPARATE = |^|
+ERROR_PATH = error
