--- a/bin/HiveLoader/conf/HiveLoader.conf
+++ b/bin/HiveLoader/conf/HiveLoader.conf
@@ -4,15 +4,11 @@ PORT=10000
 USERNAME=hdfs
 DATABASE=default
 
-[DB]
-DB_TYPE=Oracle
-DB_CONFPATH=/home/dev/KSCBP/conf/Oracle.conf
-DB_SECTION=TEST
-
 [Log]
-LogFilePath=/home/dev/KSCBP/log
+LogFilePath=log
 LogFileSize=1000000
 LogFileCount=10
 
 [TEST]
-partition_name
+Table=TEST
+Partitions=year,month
