--- a/bin/SSHTailCollector/SSHTailCollector.conf
+++ b/bin/SSHTailCollector/SSHTailCollector.conf
@@ -1,28 +1,19 @@
 [COMMON]
 LOG = /home/sktlnms/SKTLNMS/log
 
-[DBMS]
-HOST = 211.237.65.153
-PORT = 3306
+[TEST]
+HOST = 211.237.78.86
+PORT = 22
 USER = sktlnms
-PASS = !Hello.nms0
-BASE = SKTLNMS
-
-
-[SMSIOAM]
-HOST = 211.237.69.63
-PORT = 50003
-USER = NMS
-PASS = SKTL00700!
-RDIR = /home/sktelsmsi/HOME/log/fault
-PATN = fault.20??????
-BASE = fault.%%Y%%m%%d
-LDIR = /DATA1/RAWDATA/FM/SMSI/SMSIOAM
-RIDX = /home/sktlnms/SKTLNMS/Index/SMS_NET/smsioam.idx
-#RIDX = /DATA1/RAWDATA/FM/SMSI/SMSIOAM/smsi.idx
+PASS = !hello.nms0
+RDIR = /export/home/nosnms/alarm
+PATN = ALARM_20??????.txt
+BASE = ALARM_%%Y%%m%%d.txt
+LDIR = /DATA1/RAWDATA/FM/ADDNET
+RIDX = /home/sktlnms/SKTLNMS/Index/TEST/test.idx
 INTV = 0.1
 UIDS = SYSTEM
-EPTN = \s*COMPLETE\s*
-TYPE = SMS
-EQUIP_TYPE =
-EQUIP_GROUP = 메시지망
+EPTN =
+PROC_TYPE = FO
+SAVE_PATH = /DATA1/TEST
+SAVE_RANGE = M
