Add Aggregator module using encrypted config case

--- a/bin/Aggregator/conf/Aggregator.conf
+++ b/bin/Aggregator/conf/Aggregator.conf
@@ -9,7 +9,7 @@ GROUPBY=major
 SUM=age
 MAX=age
 MIN=age
-DB_TYPE=MySQL
-DB_CONFPATH=conf/MySQL.conf
-DB_SECTION=TEST
-DB_TABLE=es1_aggregate
+STORAGE_TYPE=MySQL
+STORAGE_CONFPATH=conf/MySQL.conf
+STORAGE_SECTION=TEST
+STORAGE_TABLE=es1_aggregate
