Add function to load as file

--- a/bin/Aggregator/conf/File.conf
+++ b/bin/Aggregator/conf/File.conf
@@ -1,6 +1,7 @@
-# MODE : A, W
+# MODE : a, w
 [TEST]
 DIRPATH=tmp
-FILENAME=TEST
-MODE=A
-FILECOUNT=10
+FILENAME=TEST.csv
+SEP=,
+MODE=a
+INDEX=False
