--- a/bin/Aggregator/requirements.txt
+++ b/bin/Aggregator/requirements.txt
@@ -1,10 +1,15 @@
+asn1crypto==0.24.0
 astroid==1.6.5
 backports.functools-lru-cache==1.5
+cffi==1.11.5
 configparser==3.5.0
 coverage==4.5.1
+cryptography==2.2.2
 cx-Oracle==6.3.1
 enum34==1.1.6
 futures==3.2.0
+idna==2.7
+ipaddress==1.0.22
 isort==4.3.4
 lazy-object-proxy==1.3.1
 mccabe==0.6.1
@@ -12,9 +17,11 @@ MySQL-python==1.2.5
 nose==1.3.7
 numpy==1.14.3
 pandas==0.23.0
+pycparser==2.18
 pylint==1.9.2
 python-dateutil==2.7.3
 pytz==2018.4
+secureconfig==0.1.1.0
 singledispatch==3.4.0.3
 six==1.11.0
 SQLAlchemy==1.2.8
