kotra kita spider 추가

--- a/Crawler/conf/Crawler.conf
+++ b/Crawler/conf/Crawler.conf
@@ -1,7 +1,13 @@
 [GENERAL]
-LOG_PATH = /home/crawler/crawler/log
-MLIB_PATH = /home/crawler/mlib
+LOG_PATH = /home/mlib/crawler/log
+MLIB_PATH = /home/mlib/mlib
 
+
+[KOTRA_KITA2_SPIDER]
+HANDLER_TYPE = SPIDER
+SPIDERS = KOTRA_KITA
+CONFIG_FILE = /home/mlib/crawler/conf/spider/kotra.conf
+PORT = 8088
 
 [KOTRA_LINKEDIN_SPIDER]
 HANDLER_TYPE = SPIDER
