--- a/Crawler/conf/parser/web.conf
+++ b/Crawler/conf/parser/web.conf
@@ -27,6 +27,7 @@ iris_direct = False
 
 [PARSER_NEWS_MINING]
 exporter = IRIS_LOAD
+EXCLUDE_KEYWORDS = ['공유','TV']
 iris_host = 192.168.100.180:5050
 iris_id = khna
 iris_passwd = mobi!@#123
