QueueExporter Encoding 추가

--- a/Crawler/conf/parser/web.conf
+++ b/Crawler/conf/parser/web.conf
@@ -27,7 +27,7 @@ iris_direct = False
 
 [PARSER_NEWS_MINING]
 exporter = IRIS_LOAD
-EXCLUDE_KEYWORDS = ['공유','TV']
+EXCLUDE_KEYWORDS = ['코로나']
 iris_host = 192.168.100.180:5050
 iris_id = khna
 iris_passwd = mobi!@#123
@@ -35,8 +35,8 @@ iris_database = KHNA
 iris_direct = False
 iris_load_ctl_file = /home/mlib/crawler/ctl/TB_NEWS_MINING.ctl
 iris_load_table = TB_NEWS_MINING
-iris_loadingrange = 1
-iris_partitionrange = 10
+iris_loadingrange = 10
+iris_partitionrange = 1440
 
 [PARSER_ELASTIC]
 exporter = ELASTICSEARCH
