textmine 전처리 추가

--- a/Crawler/conf/Crawler.conf
+++ b/Crawler/conf/Crawler.conf
@@ -87,7 +87,7 @@ HANDLER_TYPE = SPIDER
 SPIDERS = NAVER
 CONFIG_FILE = /home/mlib/crawler/conf/spider/naver.conf
 PORT = 8081
-CLIENTS_PORT = 8070
+CLIENTS_PORT = 8070,8071
 SCHEDULE = '*/10 * * * *'
 
 
@@ -135,6 +135,13 @@ CONFIG_FILE = /home/mlib/crawler/conf/parser/web.conf
 PORT = 8070
 #CLIENTS_IP = 192.168.203.228
 #CLIENTS_PORT = 8092
+
+
+[PARSER_NEWS_TEXTS]
+HANDLER_TYPE = PARSER
+PARSER = NEWS_TEXTS
+CONFIG_FILE = /home/mlib/crawler/conf/parser/web.conf
+PORT = 8071
 
 [PARSER_ELASTIC]
 HANDLER_TYPE = PARSER
