--- a/Crawler/conf/parser/web.conf
+++ b/Crawler/conf/parser/web.conf
@@ -38,6 +38,20 @@ iris_load_table = TB_NEWS_MINING
 iris_loadingrange = 10
 iris_partitionrange = 1440
 
+
+[PARSER_NEWS_TEXTS]
+exporter = IRIS_LOAD
+EXCLUDE_KEYWORDS = ['코로나']
+iris_host = 192.168.100.180:5050
+iris_id = khna
+iris_passwd = mobi!@#123
+iris_database = KHNA
+iris_direct = False
+iris_load_ctl_file = /home/mlib/crawler/ctl/TB_NEWS_TEXTS.ctl
+iris_load_table = TB_NEWS_TEXTS
+iris_loadingrange = 10
+iris_partitionrange = 1440
+
 [PARSER_ELASTIC]
 exporter = ELASTICSEARCH
 host_ip = 100.100.10.10
