--- a/Crawler/conf/SIOEF.conf
+++ b/Crawler/conf/SIOEF.conf
@@ -1,18 +1,18 @@
-# python /home/crawler/mlib/Mobigen/bin/SIOEF2 0.0.0.0 40000 $HOME/crawler/conf/SIOEF.conf & > /dev/null &
+# python /home/mlib/mlib/Mobigen/bin/SIOEF2 0.0.0.0 40000 $HOME/crawler/conf/SIOEF.conf & > /dev/null &
 
 [General]
-dump dir = /home/crawler/dump
+dump dir = /home/mlib/dump
 max monitor queue = 1000
 max cmd queue = 10000
 kill wait time = 20
 error data file skip = False
 
 [Process Node]
-ps101 = python3 /home/crawler/crawler/bin/run.py /home/crawler/crawler/conf/Crawler.conf KOTRA_AMAZON_SPIDER
+ps101 = python3 /home/mlib/crawler/bin/run.py /home/mlib/crawler/conf/Crawler.conf NAVER_SPIDER
 
-ps401 = python3 /home/crawler/crawler/bin/run.py /home/crawler/crawler/conf/Crawler.conf MANAGEMENT
+ps401 = python3 /home/mlib/crawler/bin/run.py /home/mlib/crawler/conf/Crawler.conf MANAGEMENT
 
-ps501 = python3 /home/crawler/crawler/bin/run.py /home/crawler/crawler/conf/Crawler.conf SCHEDULE
+ps501 = python3 /home/mlib/crawler/bin/run.py /home/mlib/crawler/conf/Crawler.conf SCHEDULE
 
 [Thread Node]
 
