--- a/Crawler/conf/Crawler.conf
+++ b/Crawler/conf/Crawler.conf
@@ -2,6 +2,14 @@
 LOG_PATH = /home/mlib/crawler/log
 MLIB_PATH = /home/mlib/mlib
 
+[SAMPLE_SPIDER]
+HANDLER_TYPE = SPIDER
+SPIDERS = SAMPLE_SPIDER
+CONFIG_FILE = /home/mlib/crawler/conf/spider/sample.conf
+PORT = 8888
+
+
+
 
 [KOTRA_KITA2_SPIDER]
 HANDLER_TYPE = SPIDER
@@ -87,8 +95,8 @@ HANDLER_TYPE = SPIDER
 SPIDERS = NAVER
 CONFIG_FILE = /home/mlib/crawler/conf/spider/naver.conf
 PORT = 8081
-CLIENTS_PORT = 8070,8071
-SCHEDULE = '*/10 * * * *'
+CLIENTS_PORT = 8070
+#SCHEDULE = '*/10 * * * *'
 
 
 [DAUM_SPIDER]
@@ -107,7 +115,7 @@ CLIENTS_PORT = 8070
 
 [RESULT]
 HANDLER_TYPE = RESULT
-PORT = 8099
+PORT = 8070
 CLIENTS_IP = 192.168.203.228
 CLIENTS_PORT = 8092
 IS_LISTEN = True
