--- a/Crawler/conf/SIOEF.conf
+++ b/Crawler/conf/SIOEF.conf
@@ -8,7 +8,13 @@ kill wait time = 20
 error data file skip = False
 
 [Process Node]
-ps101 = python3 /home/mlib/crawler/bin/run.py /home/mlib/crawler/conf/Crawler.conf NAVER_SPIDER
+ps102 = python3 /home/mlib/crawler/bin/run.py /home/mlib/crawler/conf/Crawler.conf GOOGLE_SPIDER
+
+ps103 = python3 /home/mlib/crawler/bin/run.py /home/mlib/crawler/conf/Crawler.conf DAUM_SPIDER
+
+ps201 = python3 /home/mlib/crawler/bin/run.py /home/mlib/crawler/conf/Crawler.conf PARSER_NEWS_MINING
+
+# ps301 = python3 /home/mlib/crawler/bin/run.py /home/mlib/crawler/conf/Crawler.conf RESULT
 
 ps401 = python3 /home/mlib/crawler/bin/run.py /home/mlib/crawler/conf/Crawler.conf MANAGEMENT
 
