--- a/Crawler/conf/parser/web.conf
+++ b/Crawler/conf/parser/web.conf
@@ -26,8 +26,9 @@ iris_database = KHNA
 iris_direct = False
 
 [PARSER_NEWS_MINING]
-exporter = IRIS_LOAD
-EXCLUDE_KEYWORDS = ['코로나']
+exporter = csv
+output_filepath = /home/mlib/crawler/data
+EXCLUDE_KEYWORDS = ['LH 공실']
 iris_host = 192.168.100.180:5050
 iris_id = khna
 iris_passwd = mobi!@#123
