--- a/Crawler/conf/Crawler.conf
+++ b/Crawler/conf/Crawler.conf
@@ -6,73 +6,7 @@ MLIB_PATH = /home/mlib/mlib
 HANDLER_TYPE = SPIDER
 SPIDERS = SAMPLE_SPIDER
 CONFIG_FILE = /home/mlib/crawler/conf/spider/sample.conf
-PORT = 8888
-
-
-
-
-[KOTRA_KITA2_SPIDER]
-HANDLER_TYPE = SPIDER
-SPIDERS = KOTRA_KITA
-CONFIG_FILE = /home/mlib/crawler/conf/spider/kotra.conf
-PORT = 8088
-
-[KOTRA_LINKEDIN_SPIDER]
-HANDLER_TYPE = SPIDER
-SPIDERS = KOTRA_LINKEDIN
-CONFIG_FILE = /home/crawler/crawler/conf/spider/kotra.conf
-PORT = 8088
-
-[KOTRA_WORLDBANK_SPIDER]
-HANDLER_TYPE = SPIDER
-SPIDERS = WEB
-CONFIG_FILE = /home/mlib/crawler/conf/spider/kotra.conf
-PORT = 8088
-CLIENTS_PORT = 8073
-SCHEDULE = '*/3 * * * *'
-
-[KOTRA_WORLDBANK_PARSER]
-HANDLER_TYPE = PARSER
-PARSER = KOTRA_WORLDBANK
-CONFIG_FILE = /home/mlib/crawler/conf/parser/kotra.conf
-PORT = 8073
-
-[KOTRA_AMAZON_SPIDER]
-HANDLER_TYPE = SPIDER
-SPIDERS = KOTRA_AMAZON
-#CONFIG_FILE = /home/mlib/crawler/conf/spider/web.conf
-PORT = 8089
-CLIENTS_PORT = 8071
-SCHEDULE = '*/5 * * * *'
-
-[KOTRA_AMAZON_PARSER]
-HANDLER_TYPE = PARSER
-PARSER = KOTRA_AMAZON
-CONFIG_FILE = /home/mlib/crawler/conf/parser/kotra.conf
-PORT = 8071
-CLIENTS_PORT = 8080
-
-#[KOTRA_AMAZON_PARSER]
-#HANDLER_TYPE = PARSER
-#PARSER = WEB
-#CONFIG_FILE = /home/mlib/crawler/conf/parser/web.conf
-#PORT = 8071
-#CLIENTS_PORT = 8080
-
-
-[KOTRA_KITA_SPIDER]
-HANDLER_TYPE = SPIDER
-SPIDERS = WEB
-CONFIG_FILE = /home/mlib/crawler/conf/spider/kotra.conf
-PORT = 8089
-CLIENTS_PORT = 8071
-SCHEDULE = '*/5 * * * *'
-
-[KOTRA_KITA_PARSER]
-HANDLER_TYPE = PARSER
-PARSER = KOTRA_KITA
-CONFIG_FILE = /home/mlib/crawler/conf/parser/kotra.conf
-PORT = 8071
+PORT = 8888 
 
 [SELENIUM_IDE]
 HANDLER_TYPE = SPIDER
@@ -81,42 +15,41 @@ CONFIG_FILE = /home/mlib/crawler/conf/spider/selenium_ide.conf
 PORT = 8089
 CLIENTS_PORT = 8071
 
-
 [SPIDER]
 HANDLER_TYPE = SPIDER
 SPIDERS = WEB
-CONFIG_FILE = /home/crawler/crawler/conf/spider/web.conf
+CONFIG_FILE = /home/mlib/crawler/conf/spider/web.conf
 PORT = 8080
 CLIENTS_PORT = 8070
-
 
 [NAVER_SPIDER]
 HANDLER_TYPE = SPIDER
 SPIDERS = NAVER
-CONFIG_FILE = /home/mlib/crawler/conf/spider/naver.conf
 PORT = 8081
+CONFIG_FILE = /home/mlib/crawler/conf/spider/naver.conf
 CLIENTS_PORT = 8070
-#SCHEDULE = '*/10 * * * *'
-
+SCHEDULE = '*/10 * * * *'
 
 [DAUM_SPIDER]
 HANDLER_TYPE = SPIDER
 SPIDERS = DAUM
-CONFIG_FILE = /home/mlib/crawler/conf/spider/daum.conf
 PORT = 8082
+CONFIG_FILE = /home/mlib/crawler/conf/spider/daum.conf
 CLIENTS_PORT = 8070
+SCHEDULE = '*/10 * * * *'
 
 [GOOGLE_SPIDER]
 HANDLER_TYPE = SPIDER
 SPIDERS = GOOGLE
-CONFIG_FILE = /home/mlib/crawler/conf/spider/google.conf
 PORT = 8083
+CONFIG_FILE = /home/mlib/crawler/conf/spider/google.conf
 CLIENTS_PORT = 8070
+SCHEDULE = '*/10 * * * *'
 
 [RESULT]
 HANDLER_TYPE = RESULT
 PORT = 8070
-CLIENTS_IP = 192.168.203.228
+#CLIENTS_IP = 192.168.203.228
 CLIENTS_PORT = 8092
 IS_LISTEN = True
 
@@ -142,8 +75,7 @@ PARSER = NEWS_MINING
 CONFIG_FILE = /home/mlib/crawler/conf/parser/web.conf
 PORT = 8070
 #CLIENTS_IP = 192.168.203.228
-#CLIENTS_PORT = 8092
-
+#CLIENTS_PORT = 8070
 
 [PARSER_NEWS_TEXTS]
 HANDLER_TYPE = PARSER
@@ -165,20 +97,12 @@ PORT = 8070
 
 [MANAGEMENT]
 HANDLER_TYPE = MANAGEMENT
-IP = 100.100.10.10
+#IP = 100.100.10.10
 PORT = 5050
 CLIENTS_PORT = 8080,8081,8082,8083,8084,8070,8071,8073,8088,8089,8099,8092
 
 [SCHEDULE]
 HANDLER_TYPE = SCHEDULE
-IP = 100.100.10.10
+#IP = 100.100.10.10
 PORT = 5051
-CLIENTS_PORT = 8081,8082,8083,8084,8070,8071,8088,8089
-
-
-[KOTRA_TRADENAVI_SPIDER]
-HANDLER_TYPE = SPIDER
-SPIDERS = KOTRA_TRADENAVI
-CONFIG_FILE = /home/mlib/crawler/conf/spider/kotra.conf
-PORT = 8080
-CLIENTS_PORT = 8070
+CLIENTS_PORT = 8081,8082,8083,8084,8070,8071,8088,8089 
